# configparser

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: parser.c  parser.h
test/: demo.conf  test_config_parser.c
